2010-01-14 Andreas Radke <andyrtr at archlinux.org>

        * 3.3_dev300_m69-1:
        - new snapshot
	- gtk2 is a needed runtime dep, #17728

2010-01-01 Andreas Radke <andyrtr at archlinux.org>

        * 3.2_dev300_m68-1:
        - new snapshot
	- build with internal lucene

2009-12-18 Andreas Radke <andyrtr at archlinux.org>

        * 3.2_dev300_m67-1:
        - new snapshot
	- build against system boost again

2009-12-03 Andreas Radke <andyrtr at archlinux.org>

        * 3.2_dev300_m66-1:
        - new snapshot

2009-11-19 Andreas Radke <andyrtr at archlinux.org>

        * 3.2_dev300_m65-1:
        - new snapshot
	- add KDE4 support to the profile file + install msg

2009-10-28 Andreas Radke <andyrtr at archlinux.org>

        * 3.2_dev300_m63-1:
        - new snapshot

2009-10-25 Andreas Radke <andyrtr at archlinux.org>

        * 3.2_dev300_m62-1:
	- new snapshot
	- use mercurial for checkouts
	- readd missing lucene dependency
	- make it provide openoffice-en-US
	- modify pkgdesc for devel branch
	- install all built extensions
	# sun-report-builder.oxt and
	# wiki-publisher.oxt installation is still broken

2009-10-08 Andreas Radke <andyrtr at archlinux.org>

        * 3.2_dev300_m61-1:
	- new snapshot
	- use system lucene again
	- drop shell.patch that went upstream

2009-09-28 Andreas Radke <andyrtr at archlinux.org>

        * 3.2_dev300_m60-1:
	- new snapshot
	- built against new db48
	- drop gcc43 buildfix
	- drop npapi buildfix for new xulrunner
	- enable report builder extension	
	- add gcc44 buildfix
	- use internal lucene again, system lucene is broken

2009-09-25 Andreas Radke <andyrtr at archlinux.org>

	- i686 pkg needs to be build with internal
	graphite, system grphite is broken without stlport

2009-09-22 Andreas Radke <andyrtr at archlinux.org>

        * 3.2_dev300_m59-1:
	- new snapshot
	- integrate OOo-sdk with pkg split
	- enable kde4 integration
	- make use of new system lucene, beanshell, saxon, vigra
	lpsolve, hyphen