@@ -6,16 +6,16 @@ pkgbase="openoffice-base-devel"
 pkgname=('openoffice-base-devel' 'openoffice-sdk-devel')
 _OO_milestone=DEV300_m69
 pkgver=3.3_${_OO_milestone/DEV/dev}
-pkgrel=1
+pkgrel=2
 arch=('i686' 'x86_64')
 license=('LGPL3')
 url="http://www.openoffice.org"
 makedepends=(# the real makedeps
              'bison' 'svn' 'automake' 'findutils' 'flex' 'gawk' 'gcc-libs' 'libart-lgpl' 'libxtst'
-             'pam' 'sane' 'zip' 'perl-archive-zip' 'pkgconfig' 'unzip' "xulrunner>=1.9.1.6" 
-             'apache-ant>=1.7.1-3' 'cairo' 'gperf' 'libcups' 'poppler' 'pstoedit' 'gconf' "openjdk6>=1.6.2"
+             'pam' 'sane' 'zip' 'perl-archive-zip' 'pkgconfig' 'unzip' "xulrunner>=1.9.2-2" 
+             'apache-ant>=1.7.1-3' 'cairo' 'gperf' 'libcups' 'poppler' 'kdelibs' 'pstoedit' 'gconf' "openjdk6>=1.6.2"
 	     # from main OOo the deps
-	     "curl>=7.19.7" "hunspell>=1.2.8" "python>=2.6.4" 'libwpd' 'redland' 'libxaw' "neon>=0.28.6"
+	     "curl>=7.19.7" "hunspell>=1.2.8" "python>=2.6.4" 'libwpd' 'redland>=1.0.10-2' 'libxaw' "neon>=0.28.6"
              'dbus-glib' "icu>=4.2.1" 'hsqldb-java' 'libxslt' 'hicolor-icon-theme' 'desktop-file-utils'
 	     'beanshell' 'saxon' 'vigra' 'libgraphite' 'hyphen' 'lpsolve' 'libmspack' 'libldap' 'boost>=1.41.0') #'lucene' 
 	     # libmythes
@@ -174,7 +174,7 @@ package_openoffice-base-devel() {
 
  pkgdesc="OpenOffice.org - a free multiplatform and multilingual office suite - developement branch"
  install=openoffice.install
- depends=("curl>=7.19.2" "hunspell>=1.2.8" "python>=2.6.2" 'libwpd' 'redland' 'libxaw' "neon>=0.28.4"
+ depends=("curl>=7.19.2" "hunspell>=1.2.8" "python>=2.6.2" 'libwpd' 'redland>=1.0.10-2' 'libxaw' "neon>=0.28.4"
           'dbus-glib' "icu>=4.2.1" 'hsqldb-java' 'libxslt' 'hicolor-icon-theme' 'desktop-file-utils' 'gtk2'
 	  'beanshell' 'saxon' 'vigra' 'libgraphite' 'hyphen' 'lpsolve' 'libmspack' 'libldap' 'lucene') # 'libmythes'
  optdepends=('java-runtime:	adds java support'
