@@ -1,3 +1,8 @@
+2010-01-22 Andreas Radke <andyrtr at archlinux.org>
+
+        * 3.3_dev300_m69-2:
+	- rebuild for redland/libjpeg8/libpng1.4/xulrunner1.9.2
+
 2010-01-14 Andreas Radke <andyrtr at archlinux.org>
 
         * 3.3_dev300_m69-1:
